--- a/src/main/resources/fxml/admin_cars.fxml
+++ b/src/main/resources/fxml/admin_cars.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #242424;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #242424;" stylesheets="@../css/admin.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
     <top>
         <MenuBar stylesheets="@../css/MenuBar.css" BorderPane.alignment="CENTER">
             <menus>
@@ -48,7 +48,7 @@
                   <Font name="Segoe UI Semilight" size="17.0" />
                </font>
             </TextField>
-            <Button fx:id="button_return" mnemonicParsing="false" prefWidth="205.0" text="Return Car">
+            <Button fx:id="button_return" mnemonicParsing="false" prefWidth="205.0" text="Return Car" textFill="#f9f9fb">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
@@ -56,7 +56,7 @@
                   <Font name="Segoe UI Semilight" size="17.0" />
                </font>
             </Button>
-            <Button fx:id="button_rent" mnemonicParsing="false" prefWidth="205.0" text="Rent Car">
+            <Button fx:id="button_rent" mnemonicParsing="false" prefWidth="205.0" text="Rent Car" textFill="#f9f9fb">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
@@ -64,7 +64,7 @@
                   <Font name="Segoe UI Semilight" size="17.0" />
                </font>
             </Button>
-            <Button fx:id="button_add" mnemonicParsing="false" prefWidth="205.0" text="Add Car">
+            <Button fx:id="button_add" mnemonicParsing="false" prefWidth="205.0" text="Add Car" textFill="#f9f9fb">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
@@ -72,7 +72,7 @@
                   <Font name="Segoe UI Semilight" size="17.0" />
                </font>
             </Button>
-            <Button fx:id="button_edit" mnemonicParsing="false" prefWidth="205.0" text="Edit Car">
+            <Button fx:id="button_edit" mnemonicParsing="false" prefWidth="205.0" text="Edit Car" textFill="#f9f9fb">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
@@ -80,7 +80,7 @@
                   <Font name="Segoe UI Semilight" size="17.0" />
                </font>
             </Button>
-            <Button fx:id="button_delete" mnemonicParsing="false" prefWidth="205.0" text="Delete Car">
+            <Button fx:id="button_delete" mnemonicParsing="false" prefWidth="205.0" text="Delete Car" textFill="#f9f9fb">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
