--- a/src/main/resources/fxml/admin_cars.fxml
+++ b/src/main/resources/fxml/admin_cars.fxml
@@ -2,12 +2,13 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -32,22 +33,44 @@
         </MenuBar>
     </top>
     <center>
-      <ListView fx:id="lv_cars" minWidth="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="30.0" left="10.0" right="40.0" top="10.0" />
-         </BorderPane.margin></ListView>
-   </center>
+        <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+            <children>
+                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                    <children>
+                        <TextField fx:id="tf_search" prefHeight="39.0" prefWidth="161.0" promptText="🔎">
+                            <font>
+                                <Font name="Segoe UI Semilight" size="17.0" />
+                            </font>
+                            <HBox.margin>
+                                <Insets top="10.0" />
+                            </HBox.margin>
+                        </TextField>
+                        <Button fx:id="button_search" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" text="Search" textFill="#f9f9fb">
+                            <padding>
+                                <Insets bottom="1.0" left="1.0" right="1.0" top="1.0" />
+                            </padding>
+                            <HBox.margin>
+                                <Insets left="5.0" top="10.0" />
+                            </HBox.margin>
+                            <font>
+                                <Font name="Segoe UI Semilight" size="12.0" />
+                            </font>
+                        </Button>
+                    </children>
+                    <VBox.margin>
+                        <Insets bottom="10.0" top="10.0" />
+                    </VBox.margin>
+                </HBox>
+                <TableView fx:id="tv_users" minWidth="200.0" prefWidth="200.0" />
+            </children>
+            <BorderPane.margin>
+                <Insets bottom="30.0" right="30.0" />
+            </BorderPane.margin>
+        </VBox>
+    </center>
    <left>
       <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
          <children>
-            <TextField fx:id="tf_search" promptText="Search">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
-               <font>
-                  <Font name="Segoe UI Semilight" size="17.0" />
-               </font>
-            </TextField>
             <Button fx:id="button_return" mnemonicParsing="false" prefWidth="205.0" text="Return Car" textFill="#f9f9fb">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -63,6 +86,14 @@
                <font>
                   <Font name="Segoe UI Semilight" size="17.0" />
                </font>
+            </Button>
+            <Button fx:id="button_return1" mnemonicParsing="false" prefWidth="205.0" text="Rented Cars" textFill="#f9f9fb">
+               <font>
+                  <Font name="Segoe UI Semilight" size="17.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin>
             </Button>
             <Button fx:id="button_add" mnemonicParsing="false" prefWidth="205.0" text="Add Car" textFill="#f9f9fb">
                <VBox.margin>
