--- a/src/main/resources/fxml/admin_home.fxml
+++ b/src/main/resources/fxml/admin_home.fxml
@@ -10,21 +10,21 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane style="-fx-background-color: #242424;" stylesheets="@../css/admin.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane style="-fx-background-color: #242424;" stylesheets="@../css/admin.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.controller.adminHomeController">
    <top>
       <MenuBar stylesheets="@../css/MenuBar.css" BorderPane.alignment="CENTER">
          <menus>
             <Menu mnemonicParsing="false" text="File">
                <items>
-                  <MenuItem mnemonicParsing="false" text="Log out" />
-                  <MenuItem mnemonicParsing="false" text="Close" />
+                  <MenuItem fx:id="mi_logout" mnemonicParsing="false" text="Log out" />
+                  <MenuItem fx:id="mi_close" mnemonicParsing="false" text="Close" />
                </items>
             </Menu>
             <Menu mnemonicParsing="false" text="Edit">
                <items>
                   <MenuItem mnemonicParsing="false" text="Cars" />
-                  <MenuItem mnemonicParsing="false" text="Users" />
-                  <MenuItem mnemonicParsing="false" text="Rents" />
+                  <MenuItem fx:id="mi_users" mnemonicParsing="false" text="Users" />
+                  <MenuItem fx:id="mi_rents" mnemonicParsing="false" text="Rents" />
                </items>
             </Menu>
          </menus>
@@ -33,7 +33,7 @@
    <center>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
-            <Button alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefWidth="250.0" text="Cars" textFill="#f9f9fb" VBox.vgrow="ALWAYS">
+            <Button fx:id="button_cars" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefWidth="250.0" text="Cars" textFill="#f9f9fb" VBox.vgrow="ALWAYS">
                <font>
                   <Font name="Segoe UI Semilight" size="20.0" />
                </font>
@@ -41,7 +41,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </Button>
-            <Button alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefWidth="250.0" text="Users" textFill="#f9f9fb" VBox.vgrow="ALWAYS">
+            <Button fx:id="button_users" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefWidth="250.0" text="Users" textFill="#f9f9fb" VBox.vgrow="ALWAYS">
                <font>
                   <Font name="Segoe UI Semilight" size="20.0" />
                </font>
@@ -49,7 +49,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </Button>
-            <Button alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefWidth="250.0" text="Rents" textFill="#f9f9fb" VBox.vgrow="ALWAYS">
+            <Button fx:id="button_rents" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefWidth="250.0" text="Rents" textFill="#f9f9fb" VBox.vgrow="ALWAYS">
                <font>
                   <Font name="Segoe UI Semilight" size="20.0" />
                </font>
@@ -57,7 +57,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </Button>
-            <Button alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefWidth="250.0" style="-fx-border-color: ;" text="Return Car" textFill="#f9f9fb" VBox.vgrow="ALWAYS">
+            <Button fx:id="button_returnCar" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefWidth="250.0" style="-fx-border-color: ;" text="Return Car" textFill="#f9f9fb" VBox.vgrow="ALWAYS">
                <font>
                   <Font name="Segoe UI Semilight" size="20.0" />
                </font>
