--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -23,17 +22,16 @@
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <ImageView fitHeight="400.0" fitWidth="681.0" pickOnBounds="true" preserveRatio="true" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.rowSpan="2" GridPane.vgrow="ALWAYS">
+      <ImageView fitHeight="400.0" fitWidth="681.0" pickOnBounds="true" preserveRatio="true" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowSpan="2" GridPane.vgrow="ALWAYS">
          <image>
             <Image url="@../img/FullLoginCar.png" />
          </image>
       </ImageView>
-      <VBox alignment="CENTER" GridPane.rowIndex="1" GridPane.rowSpan="2">
+      <VBox alignment="CENTER" GridPane.rowSpan="2">
          <children>
             <HBox alignment="CENTER">
                <children>
@@ -94,19 +92,12 @@
                   </ButtonBar>
                </children>
             </HBox>
-         </children>
-      </VBox>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
-         <children>
-            <Button fx:id="button_close" layoutX="226.0" layoutY="3.0" mnemonicParsing="false" onAction="#closeWindow" style="-fx-background-color: transparent;" text="X" textFill="WHITE">
+            <Button fx:id="button_close" mnemonicParsing="false" onAction="#closeWindow" style="-fx-background-color: transparent;" text="CANCEL" textFill="WHITE">
                <font>
-                  <Font name="SansSerif Regular" size="18.0" />
+                  <Font name="SansSerif Regular" size="10.0" />
                </font>
             </Button>
          </children>
-         <GridPane.margin>
-            <Insets top="10.0" />
-         </GridPane.margin>
-      </AnchorPane>
+      </VBox>
    </children>
 </GridPane>
