--- a/src/main/resources/fxml/login.fxml
+++ b/src/main/resources/fxml/login.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
@@ -33,6 +34,11 @@
       </ImageView>
       <VBox alignment="CENTER" GridPane.rowSpan="2">
          <children>
+            <Button fx:id="focus" defaultButton="true" mnemonicParsing="false" onAction="#userLogin" style="-fx-background-color: transparent; -fx-text-fill: transparent;" text="Button">
+               <cursor>
+                  <Cursor fx:constant="DEFAULT" />
+               </cursor>
+            </Button>
             <HBox alignment="CENTER">
                <children>
                   <TextField fx:id="tf_username" promptText="Username" style="-fx-background-color: transparent; -fx-border-color: #f9f9fb; -fx-border-width: 0px 0px 2px 0px; -fx-text-inner-color: #ffffff;">
@@ -58,7 +64,7 @@
                <children>
                   <ButtonBar>
                     <buttons>
-                        <Button fx:id="button_login" defaultButton="true" mnemonicParsing="false" onAction="#userLogin" text="Log in" textFill="#f9f9fb">
+                        <Button fx:id="button_login" mnemonicParsing="false" onAction="#userLogin" text="Log in" textFill="#f9f9fb">
                            <font>
                               <Font name="Segoe UI Semilight" size="13.0" />
                            </font>
@@ -83,7 +89,7 @@
                               <Font name="Segoe UI Semilight" size="15.0" />
                            </font>
                         </Label>
-                        <Button fx:id="button_toRegister" defaultButton="true" mnemonicParsing="false" onAction="#toRegisterPane" style="-fx-background-color: transparent;" text="Register" textFill="#f9f9fb">
+                        <Button fx:id="button_toRegister" mnemonicParsing="false" onAction="#toRegisterPane" style="-fx-background-color: transparent;" text="Register" textFill="#f9f9fb">
                            <font>
                               <Font name="Segoe UI Semibold" size="14.0" />
                            </font>
@@ -92,7 +98,7 @@
                   </ButtonBar>
                </children>
             </HBox>
-            <Button fx:id="button_close" mnemonicParsing="false" onAction="#closeWindow" style="-fx-background-color: transparent;" text="CANCEL" textFill="WHITE">
+            <Button fx:id="button_close" cancelButton="true" mnemonicParsing="false" onAction="#closeWindow" style="-fx-background-color: transparent;" text="CANCEL" textFill="WHITE">
                <font>
                   <Font name="SansSerif Regular" size="10.0" />
                </font>
