--- a/src/main/resources/fxml/register.fxml
+++ b/src/main/resources/fxml/register.fxml
@@ -119,7 +119,7 @@
                                         <Font name="Segoe UI Semilight" size="15.0" />
                                     </font>
                                 </Label>
-                                <Button fx:id="button_toLogin" defaultButton="true" mnemonicParsing="false" onAction="#toLoginPane" style="-fx-background-color: transparent;" text="Log in" textFill="#f9f9fb">
+                                <Button fx:id="button_toLogin" mnemonicParsing="false" onAction="#toLoginPane" style="-fx-background-color: transparent;" text="Log in" textFill="#f9f9fb">
                                     <font>
                                         <Font name="Segoe UI Semibold" size="14.0" />
                                     </font>
