--- a/src/main/resources/fxml/admin_users.fxml
+++ b/src/main/resources/fxml/admin_users.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <BorderPane style="-fx-background-color: #242424;" stylesheets="@../css/admin.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.controller.adminUsersController">
     <top>
@@ -59,14 +60,11 @@
                         <Font name="Segoe UI Semilight" size="17.0" />
                     </font>
                 </Button>
-                <Button fx:id="button_delete" mnemonicParsing="false" prefWidth="205.0" text="Delete User" textFill="#f9f9fb">
-                    <VBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                    </VBox.margin>
-                    <font>
-                        <Font name="Segoe UI Semilight" size="17.0" />
-                    </font>
-                </Button>
+            <Text fill="#f9f9fb" strokeType="OUTSIDE" strokeWidth="0.0" text="Double click on user to delete!">
+               <font>
+                  <Font name="Segoe UI Semilight" size="16.0" />
+               </font>
+            </Text>
             </children>
             <BorderPane.margin>
                 <Insets bottom="30.0" left="10.0" right="10.0" top="10.0" />
@@ -84,7 +82,7 @@
                         <Insets bottom="10.0" top="20.0" />
                     </VBox.margin>
                 </TextField>
-                <TableView fx:id="tv_users" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+                <TableView fx:id="tv_users" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#deleteUser" VBox.vgrow="ALWAYS">
                     <columns>
                         <TableColumn fx:id="tc_id" minWidth="30.0" prefWidth="-1.0" text="Id" />
                         <TableColumn fx:id="tc_username" editable="false" minWidth="85.0" prefWidth="-1.0" text="Username" />
