--- a/src/main/resources/fxml/add_user.fxml
+++ b/src/main/resources/fxml/add_user.fxml
@@ -2,37 +2,30 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="pane" style="-fx-background-color: #242424;" stylesheets="@../css/admin.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.controller.editCarController">
+<BorderPane fx:id="pane" style="-fx-background-color: #242424;" stylesheets="@../css/admin.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ba.unsa.etf.rpr.controller.addUserController">
    <center>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets top="30.0" />
          </BorderPane.margin>
          <children>
-            <Text fx:id="text_error" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
-               </VBox.margin>
-               <font>
-                  <Font name="Segoe UI Semilight" size="13.0" />
-               </font>
-            </Text>
-            <ChoiceBox fx:id="cb_carList" prefHeight="37.0" prefWidth="195.0" VBox.vgrow="ALWAYS">
+            <TextField fx:id="tf_firstName" promptText="First Name">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" />
                </VBox.margin>
-            </ChoiceBox>
-            <TextField fx:id="tf_make" promptText="Make">
+               <font>
+                  <Font name="Segoe UI Semilight" size="16.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="tf_lastName" promptText="Last Name">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
@@ -40,7 +33,7 @@
                   <Font name="Segoe UI Semilight" size="16.0" />
                </font>
             </TextField>
-            <TextField fx:id="tf_model" promptText="Model">
+            <TextField fx:id="tf_license" promptText="License Number">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
@@ -48,30 +41,13 @@
                   <Font name="Segoe UI Semilight" size="16.0" />
                </font>
             </TextField>
-            <TextField fx:id="tf_color" promptText="Color">
+            <DatePicker fx:id="dp_birthdate" prefHeight="37.0" prefWidth="196.0" promptText="Date of Birth">
                <VBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
-               <font>
-                  <Font name="Segoe UI Semilight" size="16.0" />
-               </font>
-            </TextField>
-            <TextField fx:id="tf_registration" promptText="Registration">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
-               <font>
-                  <Font name="Segoe UI Semilight" size="16.0" />
-               </font>
-            </TextField>
-            <Spinner fx:id="spinner_price" editable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="37.0" prefWidth="196.0" VBox.vgrow="ALWAYS">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </VBox.margin>
-            </Spinner>
+               </VBox.margin></DatePicker>
             <HBox alignment="CENTER">
                <children>
-                <Button fx:id="button_apply" defaultButton="true" mnemonicParsing="false" onAction="#applyEdit" prefWidth="55.0" text="Apply" textFill="#f9f9fb" HBox.hgrow="ALWAYS">
+                <Button fx:id="button_add" defaultButton="true" mnemonicParsing="false" onAction="#addUser" prefWidth="55.0" text="Add" textFill="#f9f9fb" HBox.hgrow="ALWAYS">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
@@ -90,7 +66,7 @@
       </VBox>
    </center>
    <top>
-      <Label text="Edit a Car" textFill="#f9f9fb" BorderPane.alignment="CENTER">
+      <Label text="Add a User" textFill="#f9f9fb" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets bottom="-20.0" top="20.0" />
          </BorderPane.margin>
