--- a/src/main/resources/fxml/admin_users.fxml
+++ b/src/main/resources/fxml/admin_users.fxml
@@ -43,7 +43,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
             </Button>
-                <Button fx:id="button_add" mnemonicParsing="false" prefWidth="205.0" text="Add User" textFill="#f9f9fb">
+                <Button fx:id="button_add" mnemonicParsing="false" onAction="#openAddForm" prefWidth="205.0" text="Add User" textFill="#f9f9fb">
                     <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </VBox.margin>
@@ -51,7 +51,7 @@
                         <Font name="Segoe UI Semilight" size="17.0" />
                     </font>
                 </Button>
-                <Button fx:id="button_edit" mnemonicParsing="false" prefWidth="205.0" text="Edit User" textFill="#f9f9fb">
+                <Button fx:id="button_edit" mnemonicParsing="false" onAction="#openEditForm" prefWidth="205.0" text="Edit User" textFill="#f9f9fb">
                     <VBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                     </VBox.margin>
@@ -84,9 +84,9 @@
                 <TableView fx:id="tv_users" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#deleteUser" VBox.vgrow="ALWAYS">
                     <columns>
                         <TableColumn fx:id="tc_id" minWidth="30.0" prefWidth="-1.0" text="Id" />
-                        <TableColumn fx:id="tc_license" editable="false" minWidth="85.0" prefWidth="-1.0" text="Username" />
                         <TableColumn fx:id="tc_firstName" editable="false" minWidth="100.0" prefWidth="114.66669464111328" text="First Name" />
                         <TableColumn fx:id="tc_lastName" editable="false" minWidth="100.0" prefWidth="-1.0" text="Last name" />
+                        <TableColumn fx:id="tc_license" editable="false" minWidth="85.0" prefWidth="-1.0" text="License" />
                         <TableColumn fx:id="tc_birthdate" editable="false" minWidth="80.0" prefWidth="-1.0" text="Date of Birth" />
                     </columns>
                 </TableView>
